fix(button): button content aligns verically centered now

--- a/src/Common/Button/Button.css
+++ b/src/Common/Button/Button.css
@@ -13,6 +13,9 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     vertical-align: middle;
+
+    display: flex;
+    align-items: center;
 }
 
 .btn.-plain {
